<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verifyNext">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:background="#C3F48B"
        android:fontFamily="sans-serif-black"
        android:text="@string/otpVerification"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="311dp"
        android:layout_height="30dp"
        android:text="@string/please_enter_the_otp_sent_to_you"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/resend"
        android:layout_width="177dp"
        android:layout_height="50dp"
        android:text="@string/resend"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="312dp"
        android:layout_height="31dp"
        android:text="@string/didn_t_receive_the_otp_resend_otp_again"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.15" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="223dp"
        android:layout_height="160dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_1" />


    <EditText
        android:id="@+id/box1"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:background="@drawable/myshape"
        android:ems="10"
        android:hint="@string/x1"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:text=""
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#6D4C41"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber"
        app:layout_constraintVertical_bias="0.162"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/box2"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:background="@drawable/myshape"
        android:ems="10"
        android:hint="@string/x2"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#6D4C41"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toEndOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber"
        app:layout_constraintVertical_bias="0.162"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/box3"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:background="@drawable/myshape"
        android:ems="10"
        android:hint="@string/x4"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#6D4C41"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toEndOf="@+id/box2"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber"
        app:layout_constraintVertical_bias="0.162"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/box4"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:background="@drawable/myshape"
        android:ems="10"
        android:hint="@string/x3"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#6D4C41"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toEndOf="@+id/box3"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber"
        app:layout_constraintVertical_bias="0.162"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/box5"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:background="@drawable/myshape"
        android:ems="10"
        android:hint="@string/x2"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#6D4C41"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toEndOf="@+id/box4"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber"
        app:layout_constraintVertical_bias="0.162" />

    <EditText
        android:id="@+id/box6"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/myshape"
        android:ems="10"
        android:hint="@string/x2"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#6D4C41"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/resend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/box5"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/textmobileshownumber"
        android:layout_width="216dp"
        android:layout_height="22dp"
        android:textAlignment="center"
        android:textColor="#070707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.165" />

    <Button
        android:id="@+id/submit"
        android:layout_width="328dp"
        android:layout_height="53dp"
        android:text="@string/submit"
        android:textColor="#090909"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber"
        app:layout_constraintVertical_bias="0.398" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="57dp"
        android:layout_height="35dp"
        android:text="OR"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        app:layout_constraintVertical_bias="0.137" />

</androidx.constraintlayout.widget.ConstraintLayout>